<resources>
    <string name="app_name">LiveChat</string>
    <string name="u_name">Name</string>
    <string name="u_surname">Surname</string>
    <string name="u_phone">Phone</string>
    <string name="start_chat">Go LiveChat!</string>
    <string name="company_logo_desc">Logo</string>
    <string name="title_activity_scrolling">Customer Services</string>
    <string name="action_settings">Settings</string>
    <string name="showed_username">Customer Name</string>
    <string name="send_btn_txt">Send</string>
    <string name="message_input_txt">Message</string>
    <string name="camera_btn_txt">Camera</string>
    <string-array name="list">
        <item>Salam</item>
        <item>Sagol</item>
        <item>hello</item>
        <item>bye</item>
        <item>exit</item>
    </string-array>
</resources>
